Tela de papel pessoa, oferta concurso e tipo ingresso finalizadas

--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -71,9 +71,10 @@
 					<a href="nacionalidade" id="nacionalidade" class="sub-item">Nacionalidade</a>
 					<!--<a href="orgaoPublico" class="sub-item" id="orgaoPublico">Orgão Público</a>
 					<a href="forma-organ-ensino" id="forma-organ-ensino" class="sub-item">Organizações de Ensino</a>-->
-					<a href="paises" id="paises" class="sub-item">Países</a> <a
-						href="oferta-concurso" id="oferta-concurso" class="sub-item">Oferta
-						Concurso</a>
+					<a href="paises" id="paises" class="sub-item">Países</a>
+					<a href="papel-pessoa" class="sub-item" id="papelPessoa">Papel Pessoa</a> 
+					 <a href="oferta-concurso" id="oferta-concurso" class="sub-item">Oferta Concurso</a>
+						
 					<!-- <a href="periodicidade" class="sub-item" id="periodicidade">Periodicidade</a>-->
 					<a href="periodo-letivo" id="periodo-letivo" class="sub-item">Período
 						Letivo</a>
@@ -90,8 +91,9 @@
 					<!-- <a href="tipo-ensino-medio" id="tipo-ensino-medio" class="sub-item">Tipo Ensino Médio</a>
 					<a href="tipo-profissional" class="sub-item" id="tipoProfissional">Tipo Profissional</a>
 					<a href="tipo-medicao" id="tipo-medicao" class="sub-item">Tipo Medição</a> -->
-					<a href="tipo-telefone" class="sub-item" id="tipoTelefone">Tipo
-						Telefone</a> <a href="turnos" id="turnos" class="sub-item">Turnos</a>
+					<a href="tipo-ingresso" class="sub-item" id="tipoIngresso">Tipo Ingresso</a> 
+					<a href="tipo-telefone" class="sub-item" id="tipoTelefone">TipoTelefone</a> 
+					<a href="turnos" id="turnos" class="sub-item">Turnos</a>
 					<!-- <a href="turno-professor" id="turno-professor" class="sub-item">Turno Professor</a>
 					<a href="telefones" id="telefones" class="sub-item">Tipo Telefone</a>
 					<a href="dependenciasAdm" id="dependenciasAdm" class="sub-item">Tipos de Dependências Adm</a>
