--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -44,8 +44,8 @@
 					id="itemName0">Configurações</span> <i
 					class="fas fa-angle-right dropdown"></i></a>
 				<div class="sub-menu">
-					<a href="area-conhecimento" id="area-conhecimento" class="sub-item">Áreas
-						de Conhecimento</a>
+					<!-- <a href="area-conhecimento" id="area-conhecimento" class="sub-item">Áreas
+						de Conhecimento</a> -->
 					<!-- <a href="ato-regulatorio" id="ato-regulatorio" class="sub-item">Atos Regulatórios</a> -->
 					<a href="cargo-professor" id="cargo-professor" class="sub-item">Cargo
 						Professor</a> <a href="componentes-curriculares"
@@ -92,7 +92,7 @@
 					<a href="tipo-profissional" class="sub-item" id="tipoProfissional">Tipo Profissional</a>
 					<a href="tipo-medicao" id="tipo-medicao" class="sub-item">Tipo Medição</a> -->
 					<a href="tipo-ingresso" class="sub-item" id="tipoIngresso">Tipo Ingresso</a> 
-					<a href="tipo-telefone" class="sub-item" id="tipoTelefone">TipoTelefone</a> 
+					<a href="tipo-telefone" class="sub-item" id="tipoTelefone">Tipo Telefone</a> 
 					<a href="turnos" id="turnos" class="sub-item">Turnos</a>
 					<!-- <a href="turno-professor" id="turno-professor" class="sub-item">Turno Professor</a>
 					<a href="telefones" id="telefones" class="sub-item">Tipo Telefone</a>
