ajustes de ontem

--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -92,6 +92,8 @@
 					<a href="tipo-profissional" class="sub-item" id="tipoProfissional">Tipo Profissional</a>
 					<a href="tipo-medicao" id="tipo-medicao" class="sub-item">Tipo Medição</a> -->
 					<a href="tipo-ingresso" class="sub-item" id="tipoIngresso">Tipo Ingresso</a> 
+					<a href="tipoLocalizacao" class="sub-item" id="localizacao">Tipo Localização</a>
+					
 					<a href="tipo-telefone" class="sub-item" id="tipoTelefone">Tipo Telefone</a> 
 					<a href="turnos" id="turnos" class="sub-item">Turnos</a>
 					<!-- <a href="turno-professor" id="turno-professor" class="sub-item">Turno Professor</a>
