Padrao de acesso e usuarios iniaciado, listando e criando padrao de acesso, usuario listando somente api que está com falha, edit de padrao de acesso quase finalizado

--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -207,6 +207,17 @@
 						class="sub-item">Curso</a>
 				</div>
 			</div>
+			
+			<div class="item">
+				<a class="sub-btn"> <i class="fa-solid fa-address-card"></i> <span
+					id="itemName3">Acessos</span> <i
+					class="fas fa-angle-right dropdown"></i></a>
+				<div class="sub-menu">
+					<a href="usuarios" id="usuarios" class="sub-item">Usuários</a>
+					<a href="padraoAcesso" id="padraoAcesso"
+						class="sub-item">Padrões de acesso</a>
+				</div>
+			</div>
 
 			<div class="item">
 				<a class="sub-btn"><i class="fa-solid fa-right-from-bracket"></i><span
