adcionando reserva de vaga ao menu

--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -126,6 +126,8 @@
 					<!-- <a href="escola-instrutor-pedagogico" class="sub-item">Instrutor Pedagógico</a> -->
 					<a href="escola-infraestrutura" id="escola-infraestrutura"
 						class="sub-item">Infraestrutura</a>
+						<a href="escolas-reservas" id="escolasReservas"
+						class="sub-item">Reservas de Vaga</a>
 					<!-- <a href="escola-internet" class="sub-item">Internet</a>
 						<a href="escola-licenciamento-sanitario" class="sub-item">Licenciamentos Sanitários</a>
 						<a href="escola-linguas-de-ensino" class="sub-item">Línguas de Ensino</a> -->
