Adicionado ids no menu

--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -48,9 +48,9 @@
 						de Conhecimento</a> -->
 					<!-- <a href="ato-regulatorio" id="ato-regulatorio" class="sub-item">Atos Regulatórios</a> -->
 					<a href="cargo-professor" id="cargo-professor" class="sub-item">Cargo
-						Professor</a> <a href="componentes-curriculares"
-						id="componentes-curriculares" class="sub-item">Componentes
-						Curriculares</a> <a href="concurso" id="concurso" class="sub-item">Concurso</a>
+						Professor</a> 
+						<a href="componentes-curriculares" id="componentes-curriculares" class="sub-item">Componentes Curriculares</a> 
+						<a href="concurso" id="concurso" class="sub-item">Concurso</a>
 					<!-- <a href="categoriaEscolaPrivada" class="sub-item" id="categoriaEscolaPrivada">Categoria Escola Privada</a>
 					<a href="deficiencias" id="deficiencias" class="sub-item">Deficiências</a>
 					<a href="dependencia-administrativa" id="dependencia-administrativa" class="sub-item">Dependências Administrativas</a>
@@ -65,8 +65,7 @@
 					<a href="linguas-ensino" class="sub-item" id="linguaEnsino">Línguas de Ensino</a>
 					<a href="tipoLocalizacao" class="sub-item" id="localizacao">Localização</a>
 					<a href="marca-equipamento" class="sub-item" id="marcaEquipamento">Marcas de Equipamentos</a> -->
-					<a href="modalidades" class="sub-item" id="modalidadeEscolar">Modalidades
-						Escolares</a>
+					<a href="modalidades" class="sub-item" id="modalidadeEscolar">Modalidades Escolares</a>
 					<!-- <a href="municipios" id="municipios" class="sub-item">Município</a>-->
 					<a href="nacionalidade" id="nacionalidade" class="sub-item">Nacionalidade</a>
 					<!--<a href="orgaoPublico" class="sub-item" id="orgaoPublico">Orgão Público</a>
@@ -76,18 +75,14 @@
 					 <a href="oferta-concurso" id="oferta-concurso" class="sub-item">Oferta Concurso</a>
 						
 					<!-- <a href="periodicidade" class="sub-item" id="periodicidade">Periodicidade</a>-->
-					<a href="periodo-letivo" id="periodo-letivo" class="sub-item">Período
-						Letivo</a>
+					<a href="periodo-letivo" id="periodo-letivo" class="sub-item">Período Letivo</a>
 					<!-- <a href="provedorInternet" class="sub-item" id="provedorInternet">Provedor Internet</a>-->
-					<a href="raca" id="raca" class="sub-item">Raças</a> <a
-						href="situacaoFuncionamento" id="situacaoFuncionamento"
-						class="sub-item">Situação de Funcionamento</a> <a
-						href="situacao-professor" id="situacao-professor" class="sub-item">Situação
-						Professor</a> <a href="tipoAtoRegulatorio" id="tipoAtoRegulatorio"
-						class="sub-item">Tipo Ato Regulatório</a>
+					<a href="raca" id="raca" class="sub-item">Raças</a> 
+					<a href="situacaoFuncionamento" id="situacaoFuncionamento" class="sub-item">Situação de Funcionamento</a>
+					 <a href="situacao-professor" id="situacao-professor" class="sub-item">Situação Professor</a> 
+						<a href="tipoAtoRegulatorio" id="tipoAtoRegulatorio" class="sub-item">Tipo Ato Regulatório</a>
 					<!-- <a href="tipo-atendimento" id="tipo-atendimento" class="sub-item">Tipo Atendimento</a> -->
-					<a href="tipo-dependencia" class="sub-item" id="tipoDependencia">Tipo
-						Dependência</a>
+					<a href="tipo-dependencia" class="sub-item" id="tipoDependencia">Tipo Dependência</a>
 					<!-- <a href="tipo-ensino-medio" id="tipo-ensino-medio" class="sub-item">Tipo Ensino Médio</a>
 					<a href="tipo-profissional" class="sub-item" id="tipoProfissional">Tipo Profissional</a>
 					<a href="tipo-medicao" id="tipo-medicao" class="sub-item">Tipo Medição</a> -->
@@ -121,7 +116,7 @@
 					<!-- <a href="escola-esgotamento-sanitario" class="sub-item">Esgotamentos Sanitários</a> -->
 					<a href="escola-esgoto" id="escola-esgoto" class="sub-item">Esgoto</a>
 					<!-- <a href="escola-fornecimento-de-agua" class="sub-item">Fornecimentos de Água</a>-->
-					<a href="escola-horario-funcionamento" class="sub-item">Horários
+					<a href="escola-horario-funcionamento" id="escola-horario-funcionamento" class="sub-item">Horários
 						de Funcionamento</a>
 					<!-- <a href="escola-instrutor-pedagogico" class="sub-item">Instrutor Pedagógico</a> -->
 					<a href="escola-infraestrutura" id="escola-infraestrutura"
@@ -132,7 +127,7 @@
 						<a href="escola-licenciamento-sanitario" class="sub-item">Licenciamentos Sanitários</a>
 						<a href="escola-linguas-de-ensino" class="sub-item">Línguas de Ensino</a> -->
 					<a href="escola-lixo" id="escola-lixo" class="sub-item">Lixo</a> <a
-						href="escola-modalidades" class="sub-item">Modalidades</a>
+						href="escola-modalidades" id="escola-modalidades" class="sub-item">Modalidades</a>
 					<!-- <a href="escola-marca-equipamento" class="sub-item">Marca Equipamento</a>
 						
 						<a href="escola-ppci" class="sub-item">PPCIs</a>
@@ -145,7 +140,7 @@
 						<a href="escola-profissional" class="sub-item">Profissionais</a>
 						<a href="escola-regime-escolar" class="sub-item">Regime Escolar</a>
 						<a href="escola-termo-colaboracao" class="sub-item">Termos de Colaboração</a> -->
-					<a href="escola-telefones" class="sub-item">Telefones</a>
+					<a href="escola-telefones" id="escola-telefones" class="sub-item">Telefones</a>
 					<!-- <a href="escola-tratamento-de-lixo" class="sub-item">Tratamentos de Lixo</a> -->
 				</div>
 			</div>
@@ -239,6 +234,8 @@
 var perfilArmazenado = JSON.parse(localStorage.getItem("perfil"));
 
 	$(document).ready(function() {
+		
+		
 		
 		var tamanhoMenu = $(".abracaMenu").width()
 		
