Cor do menu modificada, esperando aprovação

--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -311,7 +311,7 @@
 				$(".container-icon").css({
 					"width": "100%",
 					"display": "flex",
-					"align-items": "flex-end",
+					"align-items": "center",
 					"justify-content": "flex-end",
 					"height": "2em",
 					"padding-right": "10%",
