detalhamento de reserva vaga iniciado

--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -150,7 +150,7 @@
 					console.log(module)
 					let moduleHtml = `
                         <div class="item">
-                            <a class="sub-btn show">
+                            <a class="sub-btn showMenu">
                             	${module.iconeModulo}<span id="itemName${index}">${module.modulo}</span>
                                 <i class="fas fa-angle-right dropdown"></i>
                             </a>
@@ -173,7 +173,7 @@
 			$("#nome-user").hide();
 			$(".img-menu").hide();
 			$(".sub-menu").hide();
-			$(".show").hide();
+			$(".showMenu").hide();
 			$(".hidden").show();
 			$("#itemName1").text('')
 			
@@ -229,7 +229,7 @@
 						$("#nome-user").show();
 						$("#itemName1").text('Trocar escola')
 
-						$(".show").show();
+						$(".showMenu").show();
 						$(".hidden").hide();
 
 						/* $(".fa-angle-right").show(); */
@@ -331,7 +331,7 @@
 									$("#nome-user").show();
 									$("#itemName1").text('Trocar escola')
 
-									$(".show").show();
+									$(".showMenu").show();
 									$(".hidden").hide();
 
 									 $(".fa-angle-right").show(); 
@@ -384,7 +384,7 @@
 						$("#itemName3").text('');
 						$("#itemName4").text('');
 						$("#itemName5").text(''); 
-						$(".show").hide();
+						$(".showMenu").hide();
 						$(".hidden").show();
 
 						$(".container-icon").css({
@@ -415,7 +415,7 @@
 				$("#nome-user").hide();
 				$(".img-menu").hide();
 				$(".sub-menu").hide();
-				$(".show").hide();
+				$(".showMenu").hide();
 				$(".hidden").show();
 				$("#itemName1").text('')
 				$("#itemName5").text('')
@@ -444,7 +444,7 @@
 				$("#itemName1").text('Trocar escola')
 				$("#itemName5").text('Sair')
 
-				$(".show").show();
+				$(".showMenu").show();
 				$(".hidden").hide();
 
 				/* $(".fa-angle-right").show(); */
