Tentando add mensagem de senha coincidindo e falhando

--- a/WebContent/resources/menu/menu.html
+++ b/WebContent/resources/menu/menu.html
@@ -482,6 +482,10 @@
 			$('#modalMenu').show();
 		});
 		
+		
+		$(".logoSumare").click(()=>{
+			window.location.href = 'acessar-escolas'
+		})
 	
 
 		$("#sairEscola").click(() => {
