--- a/WebContent/resources/menu/menu.html
+++ b/WebContent/resources/menu/menu.html
@@ -145,6 +145,7 @@
 				console.log('Erro ao carregar módulos:', error);
 			}
 		}).done(function (modules) {
+			let index = 0
 		
 			$.each(modules, function (index, module) { 
 				if(module.exibe == 'S'){
@@ -161,6 +162,10 @@
                         	</a>
                         </div>`;
 					$('#navMenu').append(moduleHtml);
+					index+=1
+					if(index == modules.length){
+						$('#navMenu').append(sairModule);
+					}
 				}
 			})
 			
@@ -239,7 +244,7 @@
 				}
 			});
 			
-			$('#navMenu').append(sairModule);
+			
 			$(".sub-btn").off('click').on('click', function () {
 				
 				$(".hidden").click(() => {					
