--- a/WebContent/resources/menu/menu.html
+++ b/WebContent/resources/menu/menu.html
@@ -18,9 +18,11 @@
       <div class="close-btn-menu botao-desativa-menu" id="closeBtn">
         <i class="fas fa-times"></i>
       </div>
+
       <div class="container-icon">
         <i class="fa-solid fa-chevron-left arrow"></i>
       </div>
+
       <div class="img-menu">
         <img
           class="logoSumare animate__animated animate__bounceIn mx-auto"
@@ -29,12 +31,16 @@
           src="resources/assets/img/logo-sumare.png"
         />
       </div>
+
       <hr />
+
       <p>
         <i class="fa-solid fa-user me-2" style="width: 28px"></i>
         <span id="nome-user"></span>
       </p>
+
       <hr />
+
       <nav class="menu" id="navMenu">
         <div class="item" id="sairEscola">
           <a class="sub-btn">
@@ -42,86 +48,6 @@
             ><span id="itemName1"> Trocar Escola</span>
           </a>
         </div>
-        <!-- <div class="item">
-				<a class="sub-btn">
-					<i class="fas fa-cogs"></i><span id="itemName0">Configurações</span>
-					<i class="fas fa-angle-right dropdown"></i>
-				</a>
-				<div class="sub-menu">
-					<a hidden href="cargo-professor" id="cargo-professor" class="sub-item">Cargo Professor</a>
-					<a hidden href="componentes-curriculares" id="componentes-curriculares" class="sub-item">Componentes
-						Curriculares</a>
-					<a hidden href="concurso" id="concurso" class="sub-item">Concurso</a>
-					<a hidden href="modalidades" class="sub-item" id="modalidadeEscolar">Modalidades Escolares</a>
-					<a hidden href="nacionalidade" id="nacionalidade" class="sub-item">Nacionalidade</a>
-					<a hidden href="paises" id="paises" class="sub-item">Países</a>
-					<a hidden href="papel-pessoa" class="sub-item" id="papelPessoa">Papel Pessoa</a>
-					<a hidden href="oferta-concurso" id="oferta-concurso" class="sub-item">Oferta Concurso</a>
-					<a hidden href="periodo-letivo" id="periodo-letivo" class="sub-item">Período Letivo</a>
-					<a hidden href="raca" id="raca" class="sub-item">Raças</a>
-					<a hidden href="escolas-reservas" id="escolasReservas" class="sub-item">Reservas de Vaga</a>
-					<a hidden href="situacaoFuncionamento" id="situacaoFuncionamento" class="sub-item">Situação de
-						Funcionamento</a>
-					<a hidden href="situacao-professor" id="situacao-professor" class="sub-item">Situação Professor</a>
-					<a hidden href="tipoAtoRegulatorio" id="tipoAtoRegulatorio" class="sub-item">Tipo Ato
-						Regulatório</a>
-					<a hidden href="tipo-dependencia" class="sub-item" id="tipoDependencia">Tipo Dependência</a>
-					<a hidden href="tipo-ingresso" class="sub-item" id="tipoIngresso">Tipo Ingresso</a>
-					<a hidden href="tipoLocalizacao" class="sub-item" id="localizacao">Tipo Localização</a>
-					<a hidden href="tipo-telefone" class="sub-item" id="tipoTelefone">Tipo Telefone</a>
-					<a hidden href="turnos" id="turnos" class="sub-item">Turnos</a>
-					<a hidden href="ufs" id="ufs" class="sub-item">UFs</a>
-				</div>
-			</div>
-			<div class="item">
-				<a class="sub-btn">
-					<i class="fa-solid fa-school"></i><span id="itemName2">Escolas</span>
-					<i class="fas fa-angle-right dropdown"></i>
-				</a>
-				<div class="sub-menu">
-					<a hidden href="acessar-escolas" id="acessar-escolas" class="sub-item">Minhas Escolas</a>
-					<a hidden href="escola-agua" id="escola-agua" class="sub-item">Água</a>
-					<a hidden href="escola-dispostivo" id="escola-dispostivo" class="sub-item">Dispositivos</a>
-					<a hidden href="escola-energia-eletrica" id="escola-energia-eletrica" class="sub-item">Energia
-						Elétrica</a>
-					<a hidden href="escola-esgoto" id="escola-esgoto" class="sub-item">Esgoto</a>
-					<a hidden href="escola-horario-funcionamento" id="escola-horario-funcionamento"
-						class="sub-item">Horários de Funcionamento</a>
-					<a hidden href="escola-infraestrutura" id="escola-infraestrutura"
-						class="sub-item">Infraestrutura</a>
-					<a hidden href="escola-lixo" id="escola-lixo" class="sub-item">Lixo</a>
-					<a hidden href="escola-modalidades" id="escola-modalidades" class="sub-item">Modalidades</a>
-					<a hidden href="escola-telefones" id="escola-telefones" class="sub-item">Telefones</a>
-				</div>
-			</div>
-			<div class="item">
-				<a class="sub-btn">
-					<i class="fa-solid fa-users"></i> <span id="itemName3">Matriz Curricular</span>
-					<i class="fas fa-angle-right dropdown"></i>
-				</a>
-				<div class="sub-menu">
-					<a hidden href="area-conhecimento" id="areaConhecimento" class="sub-item">Áreas de conhecimento</a>
-					<a hidden href="disciplinas" id="disciplinas" class="sub-item">Disciplinas</a>
-					<a hidden href="curso" id="curso" class="sub-item">Curso</a>
-				</div>
-			</div>
-			<div class="item">
-				<a class="sub-btn">
-					<i class="fa-solid fa-address-card"></i> <span id="itemName4">Acessos</span>
-					<i class="fas fa-angle-right dropdown"></i>
-				</a>
-				<div class="sub-menu">
-					<a hidden href="usuarios" id="usuarios" class="sub-item">Usuários</a>
-					<a hidden href="padraoAcesso" id="padraoAcesso" class="sub-item">Padrões de acesso</a>
-					<a hidden href="configuracao-acesso" id="configuracao-acesso" class="sub-item">Configurar
-						Padrões</a>
-				</div>
-			</div>
-			<div class="item" id="sair">
-				<a class="sub-btn">
-					<i class="fa-solid fa-right-from-bracket"></i><span id="itemName5">Sair</span>
-				</a>
-			</div> -->
       </nav>
     </section>
   </body>
@@ -227,69 +153,32 @@
             "padding-top": "0",
           });
         });
-      });
 
-      $.ajax({
-        url: `${url_base}/transacoes/${usuarioId}/acessos`,
-        type: "GET",
-        contentType: "application/json; charset=utf-8",
-        async: true,
-        error: function (error) {
-          console.log("Erro ao carregar módulos:", error);
-        },
-      }).done(function (transacoes) {
-        $.each(transacoes, function (index, subItem) {
-          if (subItem.acessa != "N") {
-            let subItemHtml = `<a href="${subItem.url.replace(
-              /\//g,
-              ""
-            )}" id="${subItem.idCodHtml}" class="sub-item">${subItem.nome}</a>`;
-            $(`#sub-menu-${subItem.idModulo}`).append(subItemHtml);
-          }
-        });
+        $.ajax({
+          url: `${url_base}/transacoes/${usuarioId}/acessos`,
+          type: "GET",
+          contentType: "application/json; charset=utf-8",
+          async: true,
+          error: function (error) {
+            console.log("Erro ao carregar módulos:", error);
+          },
+        }).done(function (transacoes) {
+          $.each(transacoes, function (index, subItem) {
+            if (subItem.acessa != "N") {
+              let subItemHtml = `<a href="${subItem.url.replace(
+                /\//g,
+                ""
+              )}" id="${subItem.idCodHtml}" class="sub-item">${
+                subItem.nome
+              }</a>`;
+              $(`#sub-menu-${subItem.idModulo}`).append(subItemHtml);
+            }
+          });
 
-        $(".sub-btn")
-          .off("click")
-          .on("click", function () {
-            $(".hidden").click(() => {
-              if (tamanhoMenu == 280) {
-                $(".abracaMenu").css("width", "280px");
-                $(".container-res").css("margin-left", "19em");
-              } else {
-                $(".abracaMenu").css("width", "250px");
-                $(".container-res").css("margin-left", "25%");
-              }
-
-              $(".arrow").css("transform", "rotate(0deg)");
-              $(".logoSumare").show();
-              $("#nome-user").show();
-              $("#itemName1").text("Trocar escola");
-              $("#itemNameSair").text("Sair");
-
-              $(".showMenu").show();
-              $(".hidden").hide();
-
-              /* $(".fa-angle-right").show(); */
-              $(".img-menu").show();
-              $(".container-icon").css({
-                width: "100%",
-                display: "flex",
-                "align-items": "center",
-                "justify-content": "flex-end",
-                height: "2em",
-                "padding-right": "10%",
-                "padding-top": "0",
-              });
-            });
-
-            /* if($(this).attr('id') == 'sair'){
-					sessionStorage.removeItem('usuarioId')
-					sessionStorage.removeItem('contaId')
-					window.location.href = 'login'
-				}  */
-
-            if ($(".abracaMenu").width() == 60) {
-              if ($(".abracaMenu").width() <= 60) {
+          $(".sub-btn")
+            .off("click")
+            .on("click", function () {
+              $(".hidden").click(() => {
                 if (tamanhoMenu == 280) {
                   $(".abracaMenu").css("width", "280px");
                   $(".container-res").css("margin-left", "19em");
@@ -307,8 +196,56 @@
                 $(".showMenu").show();
                 $(".hidden").hide();
 
-                /* $(".fa-angle-right").show(); */
                 $(".img-menu").show();
+                $(".container-icon").css({
+                  width: "100%",
+                  display: "flex",
+                  "align-items": "center",
+                  "justify-content": "flex-end",
+                  height: "2em",
+                  "padding-right": "10%",
+                  "padding-top": "0",
+                });
+              });
+
+              if ($(".abracaMenu").width() == 60) {
+                if ($(".abracaMenu").width() <= 60) {
+                  if (tamanhoMenu == 280) {
+                    $(".abracaMenu").css("width", "280px");
+                    $(".container-res").css("margin-left", "19em");
+                  } else {
+                    $(".abracaMenu").css("width", "250px");
+                    $(".container-res").css("margin-left", "25%");
+                  }
+
+                  $(".arrow").css("transform", "rotate(0deg)");
+                  $(".logoSumare").show();
+                  $("#nome-user").show();
+                  $("#itemName1").text("Trocar escola");
+                  $("#itemNameSair").text("Sair");
+
+                  $(".showMenu").show();
+                  $(".hidden").hide();
+
+                  $(".img-menu").show();
+                  $(".container-icon").css({
+                    width: "100%",
+                    display: "flex",
+                    "align-items": "flex-end",
+                    "justify-content": "flex-end",
+                    height: "2em",
+                    "padding-right": "10%",
+                    "padding-top": "0",
+                  });
+                }
+
+                $(".logoSumare").show();
+                $(".abracaMenu").css("width", "250px");
+                $(".container-res").css("margin-left", "25%");
+                $(".fa-chevron-left").css("transform", "rotate(0deg)");
+                $(".logoSumare").show();
+                $("#nome-user").show();
+                $(".fa-angle-right").show();
                 $(".container-icon").css({
                   width: "100%",
                   display: "flex",
@@ -319,34 +256,18 @@
                   "padding-top": "0",
                 });
               }
+              $(this).next(".sub-menu").slideToggle();
+              $(this).find(".dropdown").toggleClass("rotate");
+            });
 
-              $(".logoSumare").show();
-              $(".abracaMenu").css("width", "250px");
-              $(".container-res").css("margin-left", "25%");
-              $(".fa-chevron-left").css("transform", "rotate(0deg)");
-              $(".logoSumare").show();
-              $("#nome-user").show();
-              $(".fa-angle-right").show();
-              $(".container-icon").css({
-                width: "100%",
-                display: "flex",
-                "align-items": "flex-end",
-                "justify-content": "flex-end",
-                height: "2em",
-                "padding-right": "10%",
-                "padding-top": "0",
-              });
-            }
-            $(this).next(".sub-menu").slideToggle();
-            $(this).find(".dropdown").toggleClass("rotate");
+          $("#sair").click(() => {
+            sessionStorage.removeItem("contaId");
+            sessionStorage.removeItem("usuarioId");
+            window.location.href = "login";
           });
-
-        $("#sair").click(() => {
-          sessionStorage.removeItem("contaId");
-          sessionStorage.removeItem("usuarioId");
-          window.location.href = "login";
         });
       });
+
       $(".fa-chevron-left").click(() => {
         if ($(".abracaMenu").width() > 60) {
           $(".arrow").css("transform", "rotate(180deg)");
