Alteração nas imagens

--- a/WebContent/resources/menu/menu.html
+++ b/WebContent/resources/menu/menu.html
@@ -28,7 +28,7 @@
           class="logoSumare animate__animated animate__bounceIn mx-auto"
           alt="Logo Prefeitura de Uruçui"
           id="imgLogoMenu"
-          src="resources/assets/img/logo-sumare.png"
+          src="resources/assets/img/logoPrefeitura.png"
         />
       </div>
 
@@ -58,11 +58,11 @@
   <script charset="UTF-8" type="text/javascript">
     var perfilArmazenado = JSON.parse(sessionStorage.getItem("perfil"));
     var idContaAcesso = localStorage.getItem("idContaAcesso");
-    var logoConta = localStorage.getItem("imagemLogo");
+   /*  var logoConta = localStorage.getItem("imagemLogo");
 
     console.log("Logo");
     console.log(logoConta);
-    $("#imgLogoMenu").attr("src", `data:image/png;base64,${logoConta}`);
+    $("#imgLogoMenu").attr("src", `data:image/png;base64,${logoConta}`); */
 
     let isMenuClickEventAttached = false;
 
